# SAUVC2019

./: .gitignore  IMU  README.md
Reference/BallTracking@AdrianRosebrock/: Readme.md  ball_tracking.py
Setup/: get-pubkey.sh  setup.sh  test.py
src/: PID_SAUVC.py  auv.py  auv_gate.py  auv_new_fusion.py  auv_new_fusion_flare.py  auv_qualification.py  auv_qualification_depth_cv.py  auv_qualification_imu.py  auv_qualification_imu_no_depth.py  auv_qualification_nodepth.py  auv_qualification_nodepth_cv_estop.py  auv_simulated.py  auv_swing.py  auv_swing_nodepth.py  core_flare.py  cv_depth.py  cvcar_balltracking.py  imuclassThread_V2.py  main_robot.py  main_test.py  monitor.py  monitor_main.py  network.py  robot_main.py  teleop.py  test_cv_flare.py  test_cv_gate.py  test_imu.py  test_mcu.py  test_pid.py  test_template.py  tracking.py
src/IMU/: CMakeLists.txt  Makefile  SAUVC  main.cpp  python_side.py
src/cvcar/: __init__.py  mcu.py
src/cvcar/arduino_mcu/: arduino_mcu.ino
src/floater/: __init__.py  imu.py  mcu.py  motorControl_serial_python.py  pid_depth.ino
src/hardwarelib/: __init__.py  data_predictor.py  pid.py
src/imu/: __init__.py  compile.sh  imu_class.py  imu_depth.py
src/imu/Imu_c++Module/projects/IMU/: CMakeLists.txt  main.cpp
src/mcu/: __init__.py  mcu_class.py  mcu_tcp.py
src/network/: __init__.py  client.py  server.py
src/pid/: PID_SAUVC.py  __init__.py
src/tracking/: __init__.py  core_flare.py  core_flare.py.backup  core_gate.py  cores.py  cvmanager.py
src/tracking/Notes/: core_flare.py.md  core_gate.py.md
(+4 files in other folders)
